#16 completed, including nice sample img for links

--- a/src/pages/news/8-18-20.md
+++ b/src/pages/news/8-18-20.md
@@ -5,6 +5,7 @@ title: 'Welcome to Our New Website'
 author: 'Michael John'
 doctype: 'news'
 excerpt: 'This year has been our biggest year of growth since we started this journey about five years ago. As many of you know, The Agoge Project started in a basement gym, and we have worked each year to build that gym out to its maximum potential. We have worked diligently this year to find a facility and to develop the relationships necessary to help grow our program beyond our wildest dreams. We are excited to announce that in January 2021, we will be bringing The Agoge Project to the 3200 block of Belair Road, in the Belair-Edison neighborhood....'
+description: 'Press release for publishing our new website'
 ---
 
 ## Dear Agoge Project Family and Friends, 
